--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
 
 	<!-- scripts
 	================================================== -->
-	<script src="resources/js/dist/main.min.js"></script>
+	<script src="resources/js/dist/index.js"></script>
 </body>
 </html>
