moved svg sprite to external file added base for slide in and ml menu grid not working yet added browser sync for both html dev and styleguide

--- a/index.html
+++ b/index.html
@@ -17,30 +17,58 @@
 	<!-- CSS
 	================================================== -->
 	<link rel="stylesheet" href="resources/css/main.css" />
-	<style>
-		.box{
-			width: 200px;
-			height: 200px;
-			background: #000;
-			margin: 10px;
-		}
-	</style>
 </head>
 <body>
-	<header></header>
 
-	<div class="container">
-		<div class="box"></div>
-		<div class="box"></div>
-		<div class="box"></div>
-		<div class="box"></div>
-		<div class="box"></div>
-		<div class="box"></div>
-		<div class="box"></div>
-		<div class="box"></div>
-		<div class="box"></div>
-		<div class="box"></div>
-	</div>
+	<header>
+		<button class="js-menu-show" style="position: absolute; top: 0; left: 50%; z-index: 200;">toggle</button>
+	</header>
+
+	<nav class="someNavClass js-menu-test">
+		<ul>
+			<li>
+				<a href="#">Item 1 Some really long title as a test to see how it copes</a>
+				<ul>
+					<li>
+						<a href="#">Sub 1 Item 1 Some really long title as a test to see how it copes</a>
+						<ul>
+							<li><a href="#">Sub 1 Sub 1 Item 1</a></li>
+							<li><a href="#">Sub 1 Sub 1 Item 2</a></li>
+							<li><a href="#">Sub 1 Sub 1 Item 3</a></li>
+							<li><a href="#">Sub 1 Sub 1 Item 4</a></li>
+							<li><a href="#">Sub 1 Sub 1 Item 5</a></li>
+						</ul>
+					</li>
+					<li><a href="#">Sub 1 Item 2</a></li>
+					<li><a href="#">Sub 1 Item 3</a></li>
+					<li>
+						<a href="#">Sub 1 Item 4</a>
+						<ul>
+							<li><a href="#">Sub 1 Sub 3 Item 1</a></li>
+							<li><a href="#">Sub 1 Sub 3 Item 2</a></li>
+							<li><a href="#">Sub 1 Sub 3 Item 3</a></li>
+							<li><a href="#">Sub 1 Sub 3 Item 4</a></li>
+							<li><a href="#">Sub 1 Sub 3 Item 5</a></li>
+						</ul>
+					</li>
+					<li><a href="#">Sub 1 Item 5</a></li>
+				</ul>
+			</li>
+			<li><a href="#">Item 2</a></li>
+			<li>
+				<a href="#">Item 3</a>
+				<ul>
+					<li><a href="#">Sub 3 Item 1</a></li>
+					<li><a href="#">Sub 3 Item 2</a></li>
+					<li><a href="#">Sub 3 Item 3</a></li>
+					<li><a href="#">Sub 3 Item 4</a></li>
+					<li><a href="#">Sub 3 Item 5</a></li>
+				</ul>
+			</li>
+			<li><a href="#">Item 4</a></li>
+			<li><a href="#">Item 5</a></li>
+		</ul>
+	</nav>
 
 	<footer></footer>
 
