grid done with examples svg moved to external file base project updated to use new grid font loading with examples

--- a/index.html
+++ b/index.html
@@ -70,6 +70,70 @@
 		</ul>
 	</nav>
 
+	<div class="container">
+		<div class="l-list l-list--md-thirds l-list--sm-halves">
+			<div class="l-list__item l-list__item--sm-third">a</div>
+			<div class="l-list__item l-list__item--sm-two-thirds">b</div>
+			<div class="l-list__item">c</div>
+			<div class="l-list__item">c</div>
+			<div class="l-list__item">c</div>
+			<div class="l-list__item">c</div>
+			<div class="l-list__item">c</div>
+			<div class="l-list__item">c</div>
+		</div>
+	</div>
+
+	<div class="container">
+		<div class="l-list-2">
+			<div class="l-list-2__item">a</div>
+			<div class="l-list-2__item">b</div>
+			<div class="l-list-2__item">c</div>
+			<div class="l-list-2__item">c</div>
+			<div class="l-list-2__item">c</div>
+			<div class="l-list-2__item">c</div>
+			<div class="l-list-2__item">c</div>
+			<div class="l-list-2__item">c</div>
+			<div class="l-list-2__item">c</div>
+			<div class="l-list-2__item">c</div>
+		</div>
+	</div>
+
+	<div class="onethird-twothirds">
+		<div class="test-col">a</div>
+		<div class="test-col">b</div>
+	</div>
+
+	<div class="onethird-twothirds-rev">
+		<div class="test-col">a</div>
+		<div class="test-col">b</div>
+	</div>
+
+	<div class="half--half">
+		<div class="test-col">a</div>
+		<div class="test-col">b</div>
+	</div>
+
+	<div class="one-quarter--three-quarter">
+		<div class="test-col">a</div>
+		<div class="test-col">b</div>
+	</div>
+
+	<div class="one-quarter--three-quarter-rev">
+		<div class="test-col">a</div>
+		<div class="test-col">b</div>
+	</div>
+
+	<div class="grid__md-quarters--sm-halfs">
+		<div class="test-col">1</div>
+		<div class="test-col">2</div>
+		<div class="test-col">3</div>
+		<div class="test-col">4</div>
+		<div class="test-col">5</div>
+		<div class="test-col">6</div>
+		<div class="test-col">5</div>
+		<div class="test-col">6</div>
+	</div>
+
 	<footer></footer>
 
 	<!-- scripts
